Fixes the styling in the homepage from floating to the left when the title of an event is too long

--- a/htdocs/sites/miamitech.org/themes/miamitech/css/main.css
+++ b/htdocs/sites/miamitech.org/themes/miamitech/css/main.css
@@ -1210,6 +1210,7 @@ a .ico-small {
 	color: #333;
 	font-size: 1em;
 	margin-top: 6px;
+	margin-left: 103px;
 }
 
 #page .vevent div.short {
